Infrastructure for using HTML template elements.
This CL adds the basics needed to use HTML template elements in
trace-viewer.

BUG=230
R=nduca@chromium.org

Review URL: https://codereview.appspot.com/10284043

--- a/trunk/src/about_tracing.html.template
+++ b/trunk/src/about_tracing.html.template
@@ -21,6 +21,7 @@ body {
 
 </style>
 <STYLE_SHEET_CONTENTS></STYLE_SHEET_CONTENTS>
+<TEMPLATE_CONTENTS></TEMPLATE_CONTENTS>
 <script src="chrome://tracing/tracing.js"></script>
 </head>
 <body>
