--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -204,6 +204,7 @@ tracing_js_files = [
   "trace_viewer/tracing/fast_rect_renderer.js",
   "trace_viewer/tracing/filter.js",
   "trace_viewer/tracing/find_control.js",
+  "trace_viewer/tracing/find_controller.js",
   "trace_viewer/tracing/importer/__init__.js",
   "trace_viewer/tracing/importer/etw/eventtrace_parser.js",
   "trace_viewer/tracing/importer/etw/parser.js",
