--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -72,7 +72,7 @@ tracing_js_html_files = [
   "third_party/tvcm/src/tvcm/polymer.js",
   "third_party/tvcm/src/tvcm/promise.js",
   "third_party/tvcm/src/tvcm/properties.js",
-  "third_party/tvcm/src/tvcm/quad.js",
+  "third_party/tvcm/src/tvcm/quad.html",
   "third_party/tvcm/src/tvcm/raf.js",
   "third_party/tvcm/src/tvcm/range.js",
   "third_party/tvcm/src/tvcm/rect.js",
