--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -159,9 +159,9 @@ tracing_js_html_files = [
   "trace_viewer/cc/tile_coverage_rect.js",
   "trace_viewer/cc/tile_view.js",
   "trace_viewer/cc/util.js",
-  "trace_viewer/gpu/__init__.js",
-  "trace_viewer/gpu/state.js",
-  "trace_viewer/gpu/state_view.js",
+  "trace_viewer/gpu.html",
+  "trace_viewer/gpu/state.html",
+  "trace_viewer/gpu/state_view.html",
   "trace_viewer/system_stats/__init__.js",
   "trace_viewer/system_stats/system_stats_instance_track.js",
   "trace_viewer/system_stats/system_stats_snapshot.js",
