--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -162,10 +162,10 @@ tracing_js_html_files = [
   "trace_viewer/gpu.html",
   "trace_viewer/gpu/state.html",
   "trace_viewer/gpu/state_view.html",
-  "trace_viewer/system_stats/__init__.js",
-  "trace_viewer/system_stats/system_stats_instance_track.js",
-  "trace_viewer/system_stats/system_stats_snapshot.js",
-  "trace_viewer/system_stats/system_stats_snapshot_view.js",
+  "trace_viewer/system_stats.html",
+  "trace_viewer/system_stats/system_stats_instance_track.html",
+  "trace_viewer/system_stats/system_stats_snapshot.html",
+  "trace_viewer/system_stats/system_stats_snapshot_view.html",
   "trace_viewer/tcmalloc/__init__.js",
   "trace_viewer/tcmalloc/heap.js",
   "trace_viewer/tcmalloc/heap_instance_track.js",
