Convert tcmalloc directory to a HTML module.
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/119880044

--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -166,11 +166,11 @@ tracing_js_html_files = [
   "trace_viewer/system_stats/system_stats_instance_track.html",
   "trace_viewer/system_stats/system_stats_snapshot.html",
   "trace_viewer/system_stats/system_stats_snapshot_view.html",
-  "trace_viewer/tcmalloc/__init__.js",
-  "trace_viewer/tcmalloc/heap.js",
-  "trace_viewer/tcmalloc/heap_instance_track.js",
-  "trace_viewer/tcmalloc/tcmalloc_instance_view.js",
-  "trace_viewer/tcmalloc/tcmalloc_snapshot_view.js",
+  "trace_viewer/tcmalloc.html",
+  "trace_viewer/tcmalloc/heap.html",
+  "trace_viewer/tcmalloc/heap_instance_track.html",
+  "trace_viewer/tcmalloc/tcmalloc_instance_view.html",
+  "trace_viewer/tcmalloc/tcmalloc_snapshot_view.html",
   "trace_viewer/tracing/analysis/analysis_link.js",
   "trace_viewer/tracing/analysis/analysis_results.js",
   "trace_viewer/tracing/analysis/analysis_view.js",
