--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -22,7 +22,6 @@ tracing_css_files = [
   "trace_viewer/cc/layer_tree_host_impl_view.css",
   "trace_viewer/cc/layer_tree_quad_stack_view.css",
   "trace_viewer/cc/layer_view.css",
-  "trace_viewer/cc/picture_debugger.css",
   "trace_viewer/cc/picture_ops_chart_summary_view.css",
   "trace_viewer/cc/picture_ops_chart_view.css",
   "trace_viewer/cc/picture_ops_list_view.css",
@@ -133,32 +132,31 @@ tracing_js_html_files = [
   "trace_viewer/about_tracing/record_selection_dialog.js",
   "trace_viewer/about_tracing/tracing_controller_client.js",
   "trace_viewer/about_tracing/xhr_based_tracing_controller_client.js",
-  "trace_viewer/cc/__init__.js",
-  "trace_viewer/cc/constants.js",
-  "trace_viewer/cc/debug_colors.js",
-  "trace_viewer/cc/layer_impl.js",
-  "trace_viewer/cc/layer_picker.js",
-  "trace_viewer/cc/layer_tree_host_impl.js",
-  "trace_viewer/cc/layer_tree_host_impl_view.js",
-  "trace_viewer/cc/layer_tree_impl.js",
-  "trace_viewer/cc/layer_tree_quad_stack_view.js",
-  "trace_viewer/cc/layer_view.js",
-  "trace_viewer/cc/picture.js",
-  "trace_viewer/cc/picture_as_image_data.js",
+  "trace_viewer/cc.html",
+  "trace_viewer/cc/constants.html",
+  "trace_viewer/cc/debug_colors.html",
+  "trace_viewer/cc/layer_impl.html",
+  "trace_viewer/cc/layer_picker.html",
+  "trace_viewer/cc/layer_tree_host_impl.html",
+  "trace_viewer/cc/layer_tree_host_impl_view.html",
+  "trace_viewer/cc/layer_tree_impl.html",
+  "trace_viewer/cc/layer_tree_quad_stack_view.html",
+  "trace_viewer/cc/layer_view.html",
+  "trace_viewer/cc/picture.html",
+  "trace_viewer/cc/picture_as_image_data.html",
   "trace_viewer/cc/picture_debugger.html",
-  "trace_viewer/cc/picture_debugger.js",
-  "trace_viewer/cc/picture_ops_chart_summary_view.js",
-  "trace_viewer/cc/picture_ops_chart_view.js",
-  "trace_viewer/cc/picture_ops_list_view.js",
-  "trace_viewer/cc/picture_view.js",
-  "trace_viewer/cc/raster_task_slice_view.js",
-  "trace_viewer/cc/region.js",
-  "trace_viewer/cc/render_pass.js",
-  "trace_viewer/cc/selection.js",
-  "trace_viewer/cc/tile.js",
-  "trace_viewer/cc/tile_coverage_rect.js",
-  "trace_viewer/cc/tile_view.js",
-  "trace_viewer/cc/util.js",
+  "trace_viewer/cc/picture_ops_chart_summary_view.html",
+  "trace_viewer/cc/picture_ops_chart_view.html",
+  "trace_viewer/cc/picture_ops_list_view.html",
+  "trace_viewer/cc/picture_view.html",
+  "trace_viewer/cc/raster_task_slice_view.html",
+  "trace_viewer/cc/region.html",
+  "trace_viewer/cc/render_pass.html",
+  "trace_viewer/cc/selection.html",
+  "trace_viewer/cc/tile.html",
+  "trace_viewer/cc/tile_coverage_rect.html",
+  "trace_viewer/cc/tile_view.html",
+  "trace_viewer/cc/util.html",
   "trace_viewer/gpu.html",
   "trace_viewer/gpu/state.html",
   "trace_viewer/gpu/state_view.html",
