--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -167,25 +167,23 @@ tracing_js_html_files = [
   "trace_viewer/tcmalloc/heap_instance_track.html",
   "trace_viewer/tcmalloc/tcmalloc_instance_view.html",
   "trace_viewer/tcmalloc/tcmalloc_snapshot_view.html",
-  "trace_viewer/tracing/analysis/analysis_link.js",
-  "trace_viewer/tracing/analysis/analysis_results.js",
-  "trace_viewer/tracing/analysis/analysis_view.js",
-  "trace_viewer/tracing/analysis/analyze_counters.js",
-  "trace_viewer/tracing/analysis/analyze_samples.js",
-  "trace_viewer/tracing/analysis/analyze_selection.js",
-  "trace_viewer/tracing/analysis/analyze_slices.js",
+  "trace_viewer/tracing/analysis/analysis_link.html",
+  "trace_viewer/tracing/analysis/analysis_results.html",
+  "trace_viewer/tracing/analysis/analysis_view.html",
+  "trace_viewer/tracing/analysis/analyze_counters.html",
+  "trace_viewer/tracing/analysis/analyze_samples.html",
+  "trace_viewer/tracing/analysis/analyze_selection.html",
+  "trace_viewer/tracing/analysis/analyze_slices.html",
   "trace_viewer/tracing/analysis/cpu_slice_view.html",
-  "trace_viewer/tracing/analysis/cpu_slice_view.js",
-  "trace_viewer/tracing/analysis/default_object_view.js",
-  "trace_viewer/tracing/analysis/generic_object_view.js",
-  "trace_viewer/tracing/analysis/object_instance_view.js",
-  "trace_viewer/tracing/analysis/object_snapshot_view.js",
-  "trace_viewer/tracing/analysis/slice_view.js",
-  "trace_viewer/tracing/analysis/stub_analysis_results.js",
-  "trace_viewer/tracing/analysis/stub_analysis_table.js",
+  "trace_viewer/tracing/analysis/default_object_view.html",
+  "trace_viewer/tracing/analysis/generic_object_view.html",
+  "trace_viewer/tracing/analysis/object_instance_view.html",
+  "trace_viewer/tracing/analysis/object_snapshot_view.html",
+  "trace_viewer/tracing/analysis/slice_view.html",
+  "trace_viewer/tracing/analysis/stub_analysis_results.html",
+  "trace_viewer/tracing/analysis/stub_analysis_table.html",
   "trace_viewer/tracing/analysis/thread_time_slice_view.html",
-  "trace_viewer/tracing/analysis/thread_time_slice_view.js",
-  "trace_viewer/tracing/analysis/util.js",
+  "trace_viewer/tracing/analysis/util.html",
   "trace_viewer/tracing/color_scheme.js",
   "trace_viewer/tracing/constants.js",
   "trace_viewer/tracing/draw_helpers.js",
