Convert tracing files to HTML modules.
TBR=nduca@chomium.org

Review URL: https://codereview.appspot.com/114100043

--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -184,12 +184,12 @@ tracing_js_html_files = [
   "trace_viewer/tracing/analysis/stub_analysis_table.html",
   "trace_viewer/tracing/analysis/thread_time_slice_view.html",
   "trace_viewer/tracing/analysis/util.html",
-  "trace_viewer/tracing/color_scheme.js",
-  "trace_viewer/tracing/constants.js",
-  "trace_viewer/tracing/draw_helpers.js",
-  "trace_viewer/tracing/elided_cache.js",
-  "trace_viewer/tracing/fast_rect_renderer.js",
-  "trace_viewer/tracing/filter.js",
+  "trace_viewer/tracing/color_scheme.html",
+  "trace_viewer/tracing/constants.html",
+  "trace_viewer/tracing/draw_helpers.html",
+  "trace_viewer/tracing/elided_cache.html",
+  "trace_viewer/tracing/fast_rect_renderer.html",
+  "trace_viewer/tracing/filter.html",
   "trace_viewer/tracing/find_control.html",
   "trace_viewer/tracing/find_controller.html",
   "trace_viewer/tracing/importer/__init__.js",
@@ -226,7 +226,7 @@ tracing_js_html_files = [
   "trace_viewer/tracing/importer/v8/splaytree.js",
   "trace_viewer/tracing/importer/v8_log_importer.js",
   "trace_viewer/tracing/importer/zip_importer.js",
-  "trace_viewer/tracing/selection.js",
+  "trace_viewer/tracing/selection.html",
   "trace_viewer/tracing/side_panel/input_latency.html",
   "trace_viewer/tracing/side_panel/input_latency.js",
   "trace_viewer/tracing/side_panel/sampling_summary.html",
@@ -234,17 +234,16 @@ tracing_js_html_files = [
   "trace_viewer/tracing/side_panel/time_summary.html",
   "trace_viewer/tracing/side_panel/time_summary.js",
   "trace_viewer/tracing/side_panel/timeline_view.js",
-  "trace_viewer/tracing/standalone_timeline_view.js",
-  "trace_viewer/tracing/test_utils.js",
-  "trace_viewer/tracing/timeline_display_transform.js",
-  "trace_viewer/tracing/timeline_display_transform_animations.js",
-  "trace_viewer/tracing/timeline_interest_range.js",
-  "trace_viewer/tracing/timeline_track_view.js",
+  "trace_viewer/tracing/standalone_timeline_view.html",
+  "trace_viewer/tracing/test_utils.html",
+  "trace_viewer/tracing/timeline_display_transform.html",
+  "trace_viewer/tracing/timeline_display_transform_animations.html",
+  "trace_viewer/tracing/timeline_interest_range.html",
+  "trace_viewer/tracing/timeline_track_view.html",
   "trace_viewer/tracing/timeline_view.html",
-  "trace_viewer/tracing/timeline_view.js",
-  "trace_viewer/tracing/timeline_viewport.js",
-  "trace_viewer/tracing/timing_tool.js",
-  "trace_viewer/tracing/trace_model.js",
+  "trace_viewer/tracing/timeline_viewport.html",
+  "trace_viewer/tracing/timing_tool.html",
+  "trace_viewer/tracing/trace_model.html",
   "trace_viewer/tracing/trace_model/async_slice.js",
   "trace_viewer/tracing/trace_model/async_slice_group.js",
   "trace_viewer/tracing/trace_model/counter.js",
@@ -267,7 +266,7 @@ tracing_js_html_files = [
   "trace_viewer/tracing/trace_model/thread.js",
   "trace_viewer/tracing/trace_model/time_to_object_instance_map.js",
   "trace_viewer/tracing/trace_model/timed_event.js",
-  "trace_viewer/tracing/trace_model_settings.js",
+  "trace_viewer/tracing/trace_model_settings.html",
   "trace_viewer/tracing/tracks/async_slice_group_track.js",
   "trace_viewer/tracing/tracks/container_track.js",
   "trace_viewer/tracing/tracks/counter_track.js",
