Convert ETW importer to HTML modules.
TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/114110043

--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -193,11 +193,11 @@ tracing_js_html_files = [
   "trace_viewer/tracing/find_control.html",
   "trace_viewer/tracing/find_controller.html",
   "trace_viewer/tracing/importer/__init__.js",
-  "trace_viewer/tracing/importer/etw/eventtrace_parser.js",
-  "trace_viewer/tracing/importer/etw/parser.js",
-  "trace_viewer/tracing/importer/etw/process_parser.js",
-  "trace_viewer/tracing/importer/etw/thread_parser.js",
-  "trace_viewer/tracing/importer/etw_importer.js",
+  "trace_viewer/tracing/importer/etw/eventtrace_parser.html",
+  "trace_viewer/tracing/importer/etw/parser.html",
+  "trace_viewer/tracing/importer/etw/process_parser.html",
+  "trace_viewer/tracing/importer/etw/thread_parser.html",
+  "trace_viewer/tracing/importer/etw_importer.html",
   "trace_viewer/tracing/importer/gzip_importer.js",
   "trace_viewer/tracing/importer/importer.js",
   "trace_viewer/tracing/importer/linux_perf/android_parser.js",
