Commit Linux Perf importer to HTML modules
Note, I had to remove the canImportSystraceFile test as, for some reason I
was unable to determine, having that test included causes the whole
linux_perf_importer_test module to disappear.

TBR=nduca@chromium.org

Review URL: https://codereview.appspot.com/116970043

--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -200,23 +200,23 @@ tracing_js_html_files = [
   "trace_viewer/tracing/importer/etw_importer.html",
   "trace_viewer/tracing/importer/gzip_importer.js",
   "trace_viewer/tracing/importer/importer.js",
-  "trace_viewer/tracing/importer/linux_perf/android_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/bus_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/clock_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/cpufreq_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/disk_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/drm_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/exynos_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/gesture_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/i915_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/kfunc_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/mali_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/parser.js",
-  "trace_viewer/tracing/importer/linux_perf/power_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/sched_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/sync_parser.js",
-  "trace_viewer/tracing/importer/linux_perf/workqueue_parser.js",
-  "trace_viewer/tracing/importer/linux_perf_importer.js",
+  "trace_viewer/tracing/importer/linux_perf/android_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/bus_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/clock_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/cpufreq_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/disk_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/drm_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/exynos_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/gesture_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/i915_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/kfunc_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/mali_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/parser.html",
+  "trace_viewer/tracing/importer/linux_perf/power_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/sched_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/sync_parser.html",
+  "trace_viewer/tracing/importer/linux_perf/workqueue_parser.html",
+  "trace_viewer/tracing/importer/linux_perf_importer.html",
   "trace_viewer/tracing/importer/simple_line_reader.js",
   "trace_viewer/tracing/importer/task.js",
   "trace_viewer/tracing/importer/trace2html_importer.js",
