--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -241,28 +241,28 @@ tracing_js_html_files = [
   "trace_viewer/tracing/timeline_viewport.html",
   "trace_viewer/tracing/timing_tool.html",
   "trace_viewer/tracing/trace_model.html",
-  "trace_viewer/tracing/trace_model/async_slice.js",
-  "trace_viewer/tracing/trace_model/async_slice_group.js",
-  "trace_viewer/tracing/trace_model/counter.js",
-  "trace_viewer/tracing/trace_model/counter_sample.js",
-  "trace_viewer/tracing/trace_model/counter_series.js",
-  "trace_viewer/tracing/trace_model/cpu.js",
-  "trace_viewer/tracing/trace_model/event.js",
-  "trace_viewer/tracing/trace_model/flow_event.js",
-  "trace_viewer/tracing/trace_model/instant_event.js",
-  "trace_viewer/tracing/trace_model/kernel.js",
-  "trace_viewer/tracing/trace_model/object_collection.js",
-  "trace_viewer/tracing/trace_model/object_instance.js",
-  "trace_viewer/tracing/trace_model/object_snapshot.js",
-  "trace_viewer/tracing/trace_model/process.js",
-  "trace_viewer/tracing/trace_model/process_base.js",
-  "trace_viewer/tracing/trace_model/sample.js",
-  "trace_viewer/tracing/trace_model/slice.js",
-  "trace_viewer/tracing/trace_model/slice_group.js",
-  "trace_viewer/tracing/trace_model/stack_frame.js",
-  "trace_viewer/tracing/trace_model/thread.js",
-  "trace_viewer/tracing/trace_model/time_to_object_instance_map.js",
-  "trace_viewer/tracing/trace_model/timed_event.js",
+  "trace_viewer/tracing/trace_model/async_slice.html",
+  "trace_viewer/tracing/trace_model/async_slice_group.html",
+  "trace_viewer/tracing/trace_model/counter.html",
+  "trace_viewer/tracing/trace_model/counter_sample.html",
+  "trace_viewer/tracing/trace_model/counter_series.html",
+  "trace_viewer/tracing/trace_model/cpu.html",
+  "trace_viewer/tracing/trace_model/event.html",
+  "trace_viewer/tracing/trace_model/flow_event.html",
+  "trace_viewer/tracing/trace_model/instant_event.html",
+  "trace_viewer/tracing/trace_model/kernel.html",
+  "trace_viewer/tracing/trace_model/object_collection.html",
+  "trace_viewer/tracing/trace_model/object_instance.html",
+  "trace_viewer/tracing/trace_model/object_snapshot.html",
+  "trace_viewer/tracing/trace_model/process.html",
+  "trace_viewer/tracing/trace_model/process_base.html",
+  "trace_viewer/tracing/trace_model/sample.html",
+  "trace_viewer/tracing/trace_model/slice.html",
+  "trace_viewer/tracing/trace_model/slice_group.html",
+  "trace_viewer/tracing/trace_model/stack_frame.html",
+  "trace_viewer/tracing/trace_model/thread.html",
+  "trace_viewer/tracing/trace_model/time_to_object_instance_map.html",
+  "trace_viewer/tracing/trace_model/timed_event.html",
   "trace_viewer/tracing/trace_model_settings.html",
   "trace_viewer/tracing/tracks/async_slice_group_track.js",
   "trace_viewer/tracing/tracks/container_track.js",
