Add utility class for accessing trace data about the Chrome browser
Refactor code for looking for different Chrome processes into a utility
class.

R=dsinclair@chromium.org

Review URL: https://codereview.appspot.com/145840043

--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -98,6 +98,7 @@ tracing_js_html_files = [
   "trace_viewer/about_tracing/tracing_controller_client.html",
   "trace_viewer/about_tracing/xhr_based_tracing_controller_client.html",
   "trace_viewer/cc.html",
+  "trace_viewer/cc/chrome_browser.html",
   "trace_viewer/cc/constants.html",
   "trace_viewer/cc/debug_colors.html",
   "trace_viewer/cc/layer_impl.html",
