Visualize input events
Show input events in the layer tree viewer as circles.

Original patch by Vicentiu Ciorbaru <cvicentiu@chromium.org>

Screenshot:
https://drive.google.com/file/d/0ByyxMXB38gLDQ04wQ3poMGd2T0k/edit?usp=sharing

R=dsinclair@chromium.org, nduca@chromium.org

Review URL: https://codereview.appspot.com/146760043

--- a/trunk/BUILD.gn
+++ b/trunk/BUILD.gn
@@ -266,6 +266,7 @@ tracing_img_files = [
   "trace_viewer/images/checkerboard.png",
   "trace_viewer/images/collapse.png",
   "trace_viewer/images/expand.png",
+  "trace_viewer/images/input-event.png",
 ]
 
 # TODO: ideally this would go into the target_gen_dir, but this requires some
